--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -30,8 +30,6 @@ html {
     min-height: 100%;
   }
   body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
     height:100%;
   }
   .footer {
@@ -41,33 +39,7 @@ html {
     /* Set the fixed height of the footer here */
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+    text-align: center;
+    color: white;
+    background-color: #232323;
   }
-
-  main {
-    height: 100%;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    /* Ensure that the height of the element includes the  box border, not just the content */
-    border: 0;
-    /* Leave some space for the header and footer to  overlay. */
-    border-bottom: 20px solid green;            
-}
-  
-  
-  /* Custom page CSS
-  -------------------------------------------------- */
-  /* Not required for template or sticky footer method. 
-  
-  body > .container {
-    padding: 60px 15px 0;
-  }
-  
-  .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  code {
-    font-size: 80%;
-  }*/
