ajustando fundo-home

--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -19,7 +19,6 @@ body {
 }
 
 .inicio-home{
-    
     background-image: url("../../assets/images/fundo-home.jpg");
-    /*background-color: blue;*/
+    background-size: cover;
 }
