--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -136,6 +136,7 @@ body {
     padding: 2em 1em;
     margin-left: 0;
     background-color: rgba(255, 255, 255, 0.9);
+    width: 60rem;
 }
 
 #resumo-perfil {
